Fix img display and text alignment

--- a/app/assets/stylesheets/bootstrap/_customized.scss
+++ b/app/assets/stylesheets/bootstrap/_customized.scss
@@ -14,6 +14,7 @@
   height: 44px;
   img {
     height: 100%;
+    max-width: 100%;
   }
 }
 
