--- a/app/assets/stylesheets/home/contactus.scss
+++ b/app/assets/stylesheets/home/contactus.scss
@@ -12,7 +12,7 @@
   .row.info {
     margin-bottom: 45px;
     section {
-      text-align: left;
+      text-align: justify;
 
       .header {
         line-height: 16px;
