--- a/app/assets/stylesheets/home/whoweare.scss
+++ b/app/assets/stylesheets/home/whoweare.scss
@@ -3,7 +3,6 @@
   text-align: center;
   .introduction {
     .row {
-
       section {
         .header {
           line-height: 16px;
@@ -18,7 +17,7 @@
     }
     
     .row.about {
-      text-align: left;
+      text-align: justify;
       ul {
         padding-left: 15px;
       }
