--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -109,7 +109,6 @@
           .nav-icon {
             padding: 10px 0;
             width: 44px;
-            max-height: 40px;
             border-top: $light-gray 1px solid;
           }
 
